# package_scanner

./: README.md  manage.py  pyproject.toml  requirements.txt
api/: urls.py  views.py
core/: apps.py  models.py  service.py
package_scanner/: asgi.py  settings.py  urls.py  wsgi.py
scanners/: __init__.py  base_scanner.py  npm_scanner.py  scanner_factory.py
